updated: navbar title and news

--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
             <a href="gallary.html" class="font-semibold text-base hover:text-primary">Gallery</a>
             <a href="blog.html" class="font-semibold text-base hover:text-primary">Blog</a>
             <a href="contact.html" class="font-semibold text-base hover:text-primary">Contacts</a>
+            <a href="news.html" class="font-semibold text-base hover:text-primary">News</a>
             <a href="about.html" class="font-semibold text-base hover:text-primary">About</a>
         </div>
         <a href="form.html">
