--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
     <!-- footer -->
     <section class="mt-10 lg:px-20 pt-8 bg-gray-100">
         <div class="flex flex-col">
-            <div class="flex flex-row justify-between gap-5">
+            <div class="flex flex-col items-center lg:flex-row justify-between gap-5">
                 <div class="flex flex-col items-center gap-1">
                     <img class="object-cover max-w-48 max-h-48" src="./assets/logo.png" alt="Logo">
                     <h2 class="font-bold text-2xl text-blue-950">Hilltop Academy</h2>
@@ -182,20 +182,20 @@
                         <a class="hover:text-red-600" href=""><i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
-                <div class="flex flex-col gap-3">
+                <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Contact</h3>
                     <span class="font-normal text-base text-gray-900">Durgathali-2, Bajhang</span>
                     <span class="font-normal text-base text-gray-900">hilltop-academy@outlook.com</span>
                     <span class="font-normal text-base text-gray-900">+977-9814637756</span>
                 </div>
-                <div class="flex flex-col gap-3">
+                <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Pages</h3>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Contact Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">About Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Blog</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">News & Events</span></a>
                 </div>
-                <div class="flex flex-col gap-3">
+                <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Resources</h3>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Curriculum</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Textbooks</span></a>
@@ -203,7 +203,7 @@
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Policies & Guidelines</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Reports</span></a>
                 </div>
-                <div class="flex flex-col gap-3">
+                <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Join Our Newsletter</h3>
                     <div class="subscribe">
                         <input class="h-[40px] w-[180px] bg-blue-100 pl-[20px] text-blue-950 font-semibold text-base" type="text" placeholder="Your email Address">
