--- a/form.html
+++ b/form.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/ac02b855cd.js" crossorigin="anonymous"></script>
-  <title>Hilltop Academy</title>
-  <link rel="stylesheet" href="output.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ac02b855cd.js" crossorigin="anonymous"></script>
+    <title>Hilltop Academy</title>
+    <link rel="stylesheet" href="output.css">
 </head>
 
 <body>
-  <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="p-2 px-3 lg:px-16 flex bg-navbar_color bg-opacity-95 justify-between items-center sticky top-0 z-50">
         <a href="#" id="brand" class="flex gap-2 items-center">
             <img class="object-cover max-w-28 max-h-28" src="./assets/logo.png" alt="Logo">
@@ -62,41 +62,113 @@
         </div>
     </nav>
 
-  <div class="flex flex-row gap-10 mx-auto max-w-6xl justify-center items-center py-10 w-4/5">
-    <div class="flex-1">
-      <img src="assets/form.jpg" alt="Form Image" class="w-full h-80 object-cover rounded-lg shadow-md">
-    </div>
-    <div class="flex-1 bg-white p-8 rounded-lg shadow-md">
-      <form action="" class="space-y-4">
-        <div>
-          <label for="name" class="block text-gray-700 font-semibold mb-1">Name:</label>
-          <input type="text" id="name" class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
-        </div>
-        <div>
-          <label for="email" class="block text-gray-700 font-semibold mb-1">Email:</label>
-          <input type="email" id="email" class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
-        </div>
-        <div>
-          <label for="guardian-name" class="block text-gray-700 font-semibold mb-1">Guardian's Name:</label>
-          <input type="text" id="guardian-name" class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
-        </div>
-        <div>
-          <label for="guardian-relationship" class="block text-gray-700 font-semibold mb-1">Guardian's Relationship:</label>
-          <select id="guardian-relationship" class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
-            <option value="val-1">Father</option>
-            <option value="val-2">Brother</option>
-            <option value="val-3">Sister</option>
-            <option value="val-4">Mother</option>
-            <option value="val-5">Other</option>
-          </select>
-        </div>
-      </form>
-    </div>
-  </div>
+    <section class="mt-10 lg:mx-44">
+        <div class="flex flex-col lg:flex-row lg:gap-10 justify-center lg:py-10">
+            <div class="flex-1">
+                <img src="assets/form.jpg" alt="Form Image"
+                    class="w-full lg:h-[500px] object-cover rounded-lg shadow-md">
+            </div>
+            <div class="flex-1 bg-white p-5 lg:p-8 rounded-lg shadow-md">
+                <h2 class="font-semibold text-2xl text-blue-950">Registaion Form</h2>
+                <form action="" class="space-y-4 pt-4">
+                    <div class="flex flex-col lg:flex-row justify-between gap-3 lg:gap-5">
+                        <div class="">
+                            <label for="first-name" class="block text-gray-700 font-semibold mb-1">First name:</label>
+                            <input type="text" id="first-name"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                        <div class="flex-1">
+                            <label for="middle-name" class="block text-gray-700 font-semibold mb-1">Middle name:</label>
+                            <input type="text" id="middle-name"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                        <div class="flex-1">
+                            <label for="last-name" class="block text-gray-700 font-semibold mb-1">Last name:</label>
+                            <input type="text" id="last-name"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                    </div>
+                    <div class="flex flex-row justify-between gap-3 lg:gap-5">
+                        <div>
+                            <label for="dob" class="block text-gray-700 font-semibold mb-1">DOB:</label>
+                            <input type="dob" id="dob"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                        <div class="flex-1">
+                            <label for="address" class="block text-gray-700 font-semibold mb-1">Address:</label>
+                            <input type="address" id="address"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="email" class="block text-gray-700 font-semibold mb-1">Email:</label>
+                        <input type="email" id="email"
+                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                    </div>
+                    <div class="flex flex-row gap-3 lg:gap-5">
+                        <div class="flex-1">
+                            <label for="guardian-name" class="block text-gray-700 font-semibold mb-1">Guardian's
+                                Name:</label>
+                            <input type="text" id="guardian-name"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
 
+                        <div class="flex-1">
+                            <label for="guardian-relationship" class="block text-gray-700 font-semibold mb-1">Guardian's
+                                Relationship:</label>
+                            <select id="guardian-relationship"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                                <option value="val-1">Father</option>
+                                <option value="val-2">Brother</option>
+                                <option value="val-3">Sister</option>
+                                <option value="val-4">Mother</option>
+                                <option value="val-5">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="flex flex-row gap-3 lg:gap-5">
+                        <div class="flex-1">
+                            <label for="phone" class="block text-gray-700 font-semibold mb-1">Phone no.:</label>
+                            <input type="text" id="phone"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                        <div class="flex-1">
+                            <label for="mobile" class="block text-gray-700 font-semibold mb-1">Mobial no.:</label>
+                            <input type="text" id="mobile"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                    </div>
+                    <div class="flex flex-col lg:flex-row gap-3 lg:gap-5">
+                        <div class="flex-1">
+                            <label for="previous-school" class="block text-gray-700 font-semibold mb-1">Previous
+                                School:</label>
+                            <input type="text" id="previous-school"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                        <div class="flex-1">
+                            <label for="previous-class" class="block text-gray-700 font-semibold mb-1">Passout
+                                class:</label>
+                            <input type="text" id="previous-class"
+                                class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="why" class="block text-gray-700 font-semibold mb-1">Why you want to join:</label>
+                        <textarea
+                            class="w-full p-2 border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500"
+                            id="why" name="why" rows="4" cols="50"></textarea>
+                    </div>
+                    <button
+                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded transform duration-300">
+                        Submit
+                    </button>
 
+                </form>
+            </div>
+        </div>
+    </section>
 
-  <!-- footer -->
+    <!-- footer -->
     <section class="mt-10 lg:px-20 pt-8 bg-gray-100">
         <div class="flex flex-col">
             <div class="flex flex-col items-center lg:flex-row justify-between gap-5">
@@ -123,20 +195,24 @@
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Contact Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">About Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Blog</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">News & Events</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">News &
+                            Events</span></a>
                 </div>
                 <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Resources</h3>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Curriculum</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Textbooks</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Teacher's Guide</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Policies & Guidelines</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Teacher's
+                            Guide</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Policies &
+                            Guidelines</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Reports</span></a>
                 </div>
                 <div class="flex flex-col items-center gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Join Our Newsletter</h3>
                     <div class="subscribe">
-                        <input class="h-[40px] w-[180px] bg-blue-100 pl-[20px] text-blue-950 font-semibold text-base" type="text" placeholder="Your email Address">
+                        <input class="h-[40px] w-[180px] bg-blue-100 pl-[20px] text-blue-950 font-semibold text-base"
+                            type="text" placeholder="Your email Address">
                         <button class="bg-blue-950 text-white px-5 py-2">Subscribe</button>
                     </div>
                     <p class="text-sm">* Will send you weekly updates for your better <br>
@@ -144,7 +220,8 @@
                     </p>
                 </div>
             </div>
-            <div class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
+            <div
+                class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
                 <h5>Copyright @HilltopAcademy 2078. All Rights Reserved.</h5>
             </div>
         </div>
