--- a/blog.html
+++ b/blog.html
@@ -64,109 +64,117 @@
     </nav>
 
     <section class="section-p1 flex gap-4 mt-4 mb-4">
-        <div class="w-3/4 text-justify ">
-            <h4 class="font-Title font-semibold text-logo_blue">May 17, 2024</h4> 
-            <h2 class="font-Title font-semibold">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
-            <div class="group overflow-hidden my-3">
-                <img class="rounded max-h-fit  transform group-hover:scale-105 transition duration-300" src="assets/bg-3.jpg" alt="">
-            </div>
+        <div class="flex flex-col lg:flex-row gap-5 items-center">
+            <div class="lg:w-3/4 text-justify ">
+                <h4 class="font-Title font-semibold text-logo_blue">May 17, 2024</h4>
+                <h2 class="font-Title font-semibold">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+                <div class="group overflow-hidden my-3">
+                    <img class="rounded max-h-fit  transform group-hover:scale-105 transition duration-300"
+                        src="assets/bg-3.jpg" alt="">
+                </div>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui id officia fuga eos unde ipsum, 
-                nam quia aut odit saepe, veritatis, mollitia error maiores quasi neque quae! Modi, culpa esse.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quaerat quidem excepturi autem odit quo dolor laborum sed harum, 
-                dicta laboriosam sunt rem nemo numquam reprehenderit distinctio veniam cumque perspiciatis!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quas ea aspernatur impedit officia obcaecati tenetur quod veritatis accusamus maxime ipsum est, 
-                dolor esse vel consequatur pariatur exercitationem ad iste.
-            </p>
-        
-        </div>
-        <div>
-            <div class="relative">
-                <input type="text" class="pl-10 pr-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Search...">
-                <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                    <i class="fas fa-search text-gray-500"></i>
-                </div>
-            </div>
-            <h1 class="font-display font-semibold text-gray-700  py-4 ">
-                RECENT POST 
-            </h1>
-            <div class=" flex gap-4 mb-4">
-                <img class=" max-h-20 max-w-28 rounded-md" src="assets/cat-2.jpg" alt="">
-                <div class="font-Title text-justify">
-                    <h4>I have uploded a photo related Hilltop Academy </h4>
-                    <h2 class="text-logo_blue font-medium">May 17, 2024</h2>   
-                </div>
-            </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui id officia fuga eos unde ipsum,
+                    nam quia aut odit saepe, veritatis, mollitia error maiores quasi neque quae! Modi, culpa esse.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quaerat quidem excepturi autem odit quo
+                    dolor laborum sed harum,
+                    dicta laboriosam sunt rem nemo numquam reprehenderit distinctio veniam cumque perspiciatis!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quas ea aspernatur impedit
+                    officia obcaecati tenetur quod veritatis accusamus maxime ipsum est,
+                    dolor esse vel consequatur pariatur exercitationem ad iste.
+                </p>
 
-            <div class=" flex gap-4 mb-4">
-                <img class=" max-h-20 max-w-28 rounded-md" src="assets/cat-3.jpg" alt="">
-                <div class="font-Title text-justify">
-                    <h4>I have uploded a photo related Hilltop Academy </h4>
-                    <h2 class="text-logo_blue font-medium">May 17, 2024</h2>   
-                </div>
             </div>
+            <div>
+                <div class="relative">
+                    <input type="text"
+                        class="pl-10 pr-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                        placeholder="Search...">
+                    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                        <i class="fas fa-search text-gray-500"></i>
+                    </div>
+                </div>
+                <h1 class="font-display font-semibold text-gray-700  py-4 ">
+                    RECENT POST
+                </h1>
+                <div class=" flex gap-4 mb-4">
+                    <img class=" max-h-20 max-w-28 rounded-md" src="assets/cat-2.jpg" alt="">
+                    <div class="font-Title text-justify">
+                        <h4>I have uploded a photo related Hilltop Academy </h4>
+                        <h2 class="text-logo_blue font-medium">May 17, 2024</h2>
+                    </div>
+                </div>
 
-             <div class=" flex gap-4 mb-4">
-                <img class=" max-h-20 max-w-28 rounded-md" src="assets/bg-2.jpg" alt="">
-                <div class="font-Title text-justify">
-                    <h4>I have uploded a photo related Hilltop Academy </h4>
-                    <h2 class="text-logo_blue font-medium">May 17, 2024</h2>   
+                <div class=" flex gap-4 mb-4">
+                    <img class=" max-h-20 max-w-28 rounded-md" src="assets/cat-3.jpg" alt="">
+                    <div class="font-Title text-justify">
+                        <h4>I have uploded a photo related Hilltop Academy </h4>
+                        <h2 class="text-logo_blue font-medium">May 17, 2024</h2>
+                    </div>
                 </div>
-            </div> <div class=" flex gap-4 mb-4">
-                <img class=" max-h-20 max-w-28 rounded-md" src="assets/bg-1.jpg" alt="">
-                <div class="font-Title text-justify">
-                    <h4>I have uploded a photo related Hilltop Academy </h4>
-                    <h2 class="text-logo_blue font-medium">May 17, 2024</h2>   
-                </div>
-            </div>
 
-            <div class="mt-3">
-                <h1 class="font-display font-semibold text-gray-700">TAG CLOUD</h1>
-            </div>
-            <div class=" flex flex-wrap gap-2">
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue ">Design</span>
+                <div class=" flex gap-4 mb-4">
+                    <img class=" max-h-20 max-w-28 rounded-md" src="assets/bg-2.jpg" alt="">
+                    <div class="font-Title text-justify">
+                        <h4>I have uploded a photo related Hilltop Academy </h4>
+                        <h2 class="text-logo_blue font-medium">May 17, 2024</h2>
+                    </div>
                 </div>
-            </div>
+                <div class=" flex gap-4 mb-4">
+                    <img class=" max-h-20 max-w-28 rounded-md" src="assets/bg-1.jpg" alt="">
+                    <div class="font-Title text-justify">
+                        <h4>I have uploded a photo related Hilltop Academy </h4>
+                        <h2 class="text-logo_blue font-medium">May 17, 2024</h2>
+                    </div>
+                </div>
 
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue">Development</span>
+                <div class="py-4">
+                    <h1 class="font-display font-semibold text-gray-700">TAG CLOUD</h1>
                 </div>
-            </div>
+                <div class=" flex flex-wrap gap-2">
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue ">Design</span>
+                        </div>
+                    </div>
 
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue ">Marketing</span>
-                </div>
-            </div>
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue">Development</span>
+                        </div>
+                    </div>
 
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue ">SEO</span>
-                </div>
-            </div>
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue ">Marketing</span>
+                        </div>
+                    </div>
 
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue ">Writing</span>
-                </div>
-            </div>
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue ">SEO</span>
+                        </div>
+                    </div>
 
-            <div class="pl-3 pr-3 py-2 mt-4 border-2 border-solid w-fit border-logo_blue rounded">
-                <div class=" pl-3 pr-3 flex items-center cursor-pointer">
-                    <span class="text-logo_blue ">Consulting</span>
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue ">Writing</span>
+                        </div>
+                    </div>
+
+                    <div class="px-2 py-1 lg:px-3 lg:py-2 border-2 border-solid w-fit border-logo_blue rounded">
+                        <div class=" pl-3 pr-3 flex items-center cursor-pointer">
+                            <span class="text-logo_blue ">Consulting</span>
+                        </div>
+                    </div>
                 </div>
+
             </div>
-            </div>
-            
         </div>
 
     </section>
 
-   
+
 
     <!-- footer -->
     <section class="mt-10 lg:px-20 pt-8 bg-gray-100">
@@ -195,20 +203,24 @@
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Contact Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">About Us</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Blog</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">News & Events</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">News &
+                            Events</span></a>
                 </div>
                 <div class="flex flex-col items-center lg:items-start gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Resources</h3>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Curriculum</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Textbooks</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Teacher's Guide</span></a>
-                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Policies & Guidelines</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Teacher's
+                            Guide</span></a>
+                    <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Policies &
+                            Guidelines</span></a>
                     <a href=""><span class="font-normal text-base text-gray-900 hover:underline">Reports</span></a>
                 </div>
                 <div class="flex flex-col items-center lg:items-start gap-3">
                     <h3 class="font-semibold text-xl text-blue-950">Join Our Newsletter</h3>
                     <div class="subscribe">
-                        <input class="h-[40px] w-[180px] bg-blue-100 pl-[20px] text-blue-950 font-semibold text-base" type="text" placeholder="Your email Address">
+                        <input class="h-[40px] w-[180px] bg-blue-100 pl-[20px] text-blue-950 font-semibold text-base"
+                            type="text" placeholder="Your email Address">
                         <button class="bg-blue-950 text-white px-5 py-2">Subscribe</button>
                     </div>
                     <p class="text-sm">* Will send you weekly updates for your better <br>
@@ -216,7 +228,8 @@
                     </p>
                 </div>
             </div>
-            <div class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
+            <div
+                class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
                 <h5>Copyright @HilltopAcademy 2078. All Rights Reserved.</h5>
             </div>
         </div>
