--- a/gallary.html
+++ b/gallary.html
@@ -161,7 +161,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -213,7 +212,7 @@
                     </p>
                 </div>
             </div>
-            <div class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
+            <div class="flex flex-col items-center text-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
                 <h5>Copyright @HilltopAcademy 2078. All Rights Reserved.</h5>
             </div>
         </div>
