--- a/news.html
+++ b/news.html
@@ -310,7 +310,7 @@
                     </p>
                 </div>
             </div>
-            <div class="flex flex-col items-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
+            <div class=" flex flex-col items-center text-center border-t border-solid border-gray-900 font-normal mt-5 py-4 text-blue-950">
                 <h5>Copyright @HilltopAcademy 2078. All Rights Reserved.</h5>
             </div>
         </div>
