update: banner in homepage

--- a/home.html
+++ b/home.html
@@ -242,6 +242,15 @@
         </div>
     </div>
 
+    <!-- banner -->
+
+    <section class="mt-10">
+      <div class=" flex flex-col text-white justify-center items-center w-full h-44 bg-cover bg-center" style="background-image: url('assets/banner.jpg');">
+        <h1 class="text-lg font-medium font-display">Enroll with Hilltop Academy</h1>
+        <h3>"We have been providing education to the students and producing academically sound high skilled human resources for the society"</h3>
+      </div>
+    </section>
+
     <!-- services -->
     <div class="mt-10 mx-auto flex flex-col max-w-[1170px] justify-center items-center">
         <span class="text-lg lg:text-3xl font-semibold">Our Facililites And Focus</span>
