Update: Apply button

--- a/home.html
+++ b/home.html
@@ -245,9 +245,16 @@
     <!-- banner -->
 
     <section class="mt-10">
-      <div class=" flex flex-col text-white justify-center items-center w-full h-44 bg-cover bg-center" style="background-image: url('assets/banner.jpg');">
+      <div class=" flex flex-col gap-2 text-white justify-center items-center w-full h-44 bg-cover bg-center" style="background-image: url('assets/banner.jpg');">
         <h1 class="text-lg font-medium font-display">Enroll with Hilltop Academy</h1>
         <h3>"We have been providing education to the students and producing academically sound high skilled human resources for the society"</h3>
+        <a href="form.html">
+            <button
+                class="hidden lg:flex gap-2 items-center border border-gray-400 px-6 py-2 rounded-lg hover:border-gray-600 hover:bg-white hover:text-black transform duration-300">
+                <span>Apply Online!!</span>
+                <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </a>
       </div>
     </section>
 
